refactor(common): extract crud infrastructure and domain support classes
- add CrudStatusGuard and CrudVisibilityPolicy for status lifecycle control
- introduce BusinessCreateIdResolver and BusinessNumberAllocator for ID generation
- add CrudRuntimeSettings for runtime configuration
- extract MaterialCatalog, TaxRateProvider, WarehouseCatalog as domain support
- introduce TradeItemRuntimeSettings and TradeMaterialSnapshot for trade context
- add PageQuerySettings for pagination configuration
- add corresponding unit tests for all new components