@@ -2,11 +2,8 @@ package com.leo.erp.common.support;
 
 import com.leo.erp.common.error.BusinessException;
 import com.leo.erp.common.web.OptionResponse;
-import com.leo.erp.master.warehouse.domain.entity.Warehouse;
-import com.leo.erp.master.warehouse.repository.WarehouseRepository;
 import org.junit.jupiter.api.Test;
 
-import java.lang.reflect.Proxy;
 import java.util.Arrays;
 import java.util.List;
 
@@ -26,7 +23,7 @@ class WarehouseSelectionSupportTest {
 
     @Test
     void shouldAcceptConfiguredWarehouseSelection() {
-        WarehouseSelectionSupport support = new WarehouseSelectionSupport(repository(List.of(warehouse("一号库"))));
+        WarehouseSelectionSupport support = new WarehouseSelectionSupport(repository(List.of("一号库")));
 
         String warehouseName = support.normalizeWarehouseName(" 一号库 ", 1, true);
 
@@ -64,7 +61,7 @@ class WarehouseSelectionSupportTest {
     @Test
     void shouldThrowWhenNameTooLong() {
         String longName = "A".repeat(129);
-        WarehouseSelectionSupport support = new WarehouseSelectionSupport(repository(List.of(warehouse(longName))));
+        WarehouseSelectionSupport support = new WarehouseSelectionSupport(repository(List.of(longName)));
 
         assertThatThrownBy(() -> support.normalizeWarehouseName(longName, 1, true))
                 .isInstanceOf(BusinessException.class)
@@ -101,7 +98,7 @@ class WarehouseSelectionSupportTest {
 
     @Test
     void listActiveOptionsShouldReturnOptions() {
-        WarehouseSelectionSupport support = new WarehouseSelectionSupport(repository(List.of(warehouse("一号库"), warehouse("二号库"))));
+        WarehouseSelectionSupport support = new WarehouseSelectionSupport(repository(List.of("一号库", "二号库")));
 
         List<OptionResponse> options = support.listActiveOptions();
 
@@ -120,14 +117,7 @@ class WarehouseSelectionSupportTest {
 
     @Test
     void shouldFilterBlankWarehouseNamesFromRepo() {
-        Warehouse bad = new Warehouse();
-        bad.setWarehouseName("  ");
-        Warehouse good = new Warehouse();
-        good.setWarehouseName("good");
-        Warehouse nullName = new Warehouse();
-        nullName.setWarehouseName(null);
-
-        WarehouseSelectionSupport support = new WarehouseSelectionSupport(repository(List.of(bad, good, nullName)));
+        WarehouseSelectionSupport support = new WarehouseSelectionSupport(repository(Arrays.asList("  ", "good", null)));
 
         List<OptionResponse> options = support.listActiveOptions();
 
@@ -137,31 +127,14 @@ class WarehouseSelectionSupportTest {
 
     @Test
     void shouldThrowWhenValidatingNonExistentWarehouse() {
-        WarehouseSelectionSupport support = new WarehouseSelectionSupport(repository(List.of(warehouse("一号库"))));
+        WarehouseSelectionSupport support = new WarehouseSelectionSupport(repository(List.of("一号库")));
 
         assertThatThrownBy(() -> support.validateWarehouseNames(List.of("不存在")))
                 .isInstanceOf(BusinessException.class)
                 .hasMessageContaining("码头不存在: 不存在");
     }
 
-    @SuppressWarnings("unchecked")
-    private WarehouseRepository repository(List<Warehouse> warehouses) {
-        return (WarehouseRepository) Proxy.newProxyInstance(
-                WarehouseRepository.class.getClassLoader(),
-                new Class[]{WarehouseRepository.class},
-                (proxy, method, args) -> switch (method.getName()) {
-                    case "findByDeletedFlagFalseOrderByWarehouseNameAsc" -> warehouses;
-                    case "toString" -> "WarehouseRepositoryStub";
-                    case "hashCode" -> System.identityHashCode(proxy);
-                    case "equals" -> proxy == args[0];
-                    default -> throw new UnsupportedOperationException(method.getName());
-                }
-        );
-    }
-
-    private Warehouse warehouse(String warehouseName) {
-        Warehouse warehouse = new Warehouse();
-        warehouse.setWarehouseName(warehouseName);
-        return warehouse;
+    private WarehouseCatalog repository(List<String> warehouseNames) {
+        return () -> warehouseNames;
     }
 }
